Resolved Grid Visibility Issues
In some instances, certain nodes were hidden from view at the default zoom level.

--- a/pf/src/main/resources/static/style.css
+++ b/pf/src/main/resources/static/style.css
@@ -48,7 +48,8 @@
   width: 100%;
   height: 100%;
   background-color: gainsboro;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 
 }
